<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alemacedo.patago.TrustedFriendFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="76dp"
            android:layout_height="77dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/telefone"
            tools:layout_editor_absoluteY="19dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="9dp"
            android:padding="16dp"
            android:text="@string/Trusted_Friend_Title"
            android:textAlignment="center"
            android:textSize="@dimen/txtbig"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="-16dp"
            android:layout_marginTop="5dp"
            android:padding="16dp"
            android:text="@string/Trusted_Friend_Text"
            android:textAlignment="center"
            android:textSize="@dimen/txtmedium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btCall"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultpadding"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="21dp"
            android:backgroundTint="@color/patagoAzulFundo"
            android:onClick="btCallClick"
            android:padding="@dimen/defaultpadding"
            android:text="@string/call_trusted_friend"
            android:textAlignment="textStart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
