<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/patagoAzulFundo"
    android:layout_centerInParent="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultpadding"
        android:text="@string/WelcomeText"
        android:textColor="@color/patagoTextBlack"
        android:textSize="@dimen/txtbig"
        android:id="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultpadding"
        android:text="@string/PermissionText"
        android:textColor="@color/patagoTextBlack"
        android:textSize="@dimen/txtmedium"
        android:id="@+id/textView2"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="botaoPermissoes"
        android:padding="@dimen/defaultpadding"
        android:text="@string/btLetsGo"
        android:textAllCaps="false"
        android:textSize="@dimen/txtbig"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="269dp"
        android:layout_height="212dp"
        app:srcCompat="@drawable/nuvens"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="-5dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="37dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="269dp"
        android:layout_height="212dp"
        app:srcCompat="@drawable/nuvens"
        android:layout_marginLeft="186dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="-5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="79dp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/pinguim_splashscreen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="16dp"
    />


</android.support.constraint.ConstraintLayout>